# dotcc

./: .gitattributes  .gitignore  BUGS.md  C-SUPPORT.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  FRONTEND-IDEAS.md  HANDOVER-std-option.md  IMPROVEMENTS.md  LICENSE  README.md  ZIG-SUPPORT.md  dotcc.sln  fable-wall.md
DotCC.FunctionalTests/: DotCC.FunctionalTests.csproj  FixtureRunner.cs  FixtureTests.cs  GccQuadOracle.cs  GccQuadOracleTests.cs  GccWslOracle.cs  GccWslOracleTests.cs  IrDiagnostic.cs  LibraryModeTests.cs  MixedTranslationUnitTests.cs  MsvcOracle.cs  MsvcOracleTests.cs  NativeImportOracleTests.cs  SharedLibOracle.cs  SharedLibOracleTests.cs  StdParseProbeTests.cs  WasmSurfaceProbeTests.cs  WatOracleTests.cs  ZigOracle.cs  ZigOracleTests.cs  ZigTestRunnerTests.cs
DotCC.Lib/: CDialect.cs  CPreprocessor.cs  CSharpEmitter.Atomic.cs  CSharpEmitter.ConstFold.cs  CSharpEmitter.Declarations.cs  CSharpEmitter.Expressions.cs  CSharpEmitter.GlobalArrays.cs  CSharpEmitter.Layout.cs  CSharpEmitter.Statements.cs  CSharpEmitter.TypesAndFunctions.cs  CSharpEmitter.Volatile.cs  CSharpEmitter.cs  CType.cs  Compiler.Imports.cs  Compiler.Includes.cs  Compiler.Objects.cs  Compiler.Resources.cs  Compiler.Shell.cs  Compiler.cs  ConversionGate.cs  DialectGate.cs  DialectKeywordRewriter.cs  DotCC.Lib.csproj  EmitContent.cs  EmitHelpers.cs  EmitMode.cs  MacroExpander.cs  QualifierStripper.cs  SizeofFolder.cs  TypeNameRewriter.cs  WarningFlags.cs  c.lalr.yaml  zig.lalr.yaml
DotCC.Libc/: AssertLib.cs  AtomicLib.cs  CBool.cs  CTypeLib.cs  CalendarLib.cs  ComplexLib.cs  DlfcnLib.cs  DotCC.Libc.csproj  ErrnoLib.cs  FileLib.cs  Float128.cs  GlobalArrayLib.cs  InttypesLib.cs  Libc.cs  LocaleLib.cs  MathLib.cs  NativeImports.cs  PosixFsLib.cs  PosixLib.cs  PrintfBuilder.cs  (+21 more)
examples/cmake-demo/: CMakeLists.txt  README.md  dotcc-link.sh  dotcc-toolchain.cmake  geom.c  geom.h  main.c
examples/cmake-demo/include/: buildcfg.h
(+810 files in other folders)
